# slack-utils-cpp

./: .gitignore  LICENSE  Makefile  Makefile.am  README  configure  configure.ac  main.cpp  package.cpp  package.h  slackware.h  system.cpp  system.h  types.h  x.cpp
include/: Makefile.am  parse_args.hpp  slackware.hpp
include/slack-utils/: TarBall.hpp  constants.hpp  package.hpp  system.hpp  types.hpp
man/: Makefile.am  slack-utils-cpp.8
src/: Makefile.am  Makefile.old  config.h.in  main.cpp  package.cpp  package.h  parse_args.cpp  slackware.h  system.cpp  x.cpp
